<resources>
    <string name="app_name">STC Pay Challenge</string>
    <string name="search_hint">Search for a job</string>

    <string name="type">Type</string>
    <string name="company">Company</string>
    <string name="url">URL</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="apply">Apply</string>
    <string name="emptySearchMessage">Sorry, no results founded for this job</string>
</resources>