<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="job"
            type="com.example.stcpaychallenge.model.Job" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/lightGray">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/apply_button">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/lightGray">

                <TextView
                    android:id="@+id/type_legend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/type_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@{job.type}"
                    android:textColor="@color/articlecolor"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/type_legend" />

                <TextView
                    android:id="@+id/company_legend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/company"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/type_desc" />

                <TextView
                    android:id="@+id/company_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{job.company}"
                    android:textColor="@color/articlecolor"

                    app:layout_constraintEnd_toEndOf="@id/type_desc"
                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/company_legend" />

                <TextView
                    android:id="@+id/url_legend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/url"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/company_desc" />

                <TextView
                    android:id="@+id/url_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{job.url}"
                    android:textColor="@color/articlecolor"

                    app:layout_constraintEnd_toEndOf="@id/type_desc"
                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/url_legend" />

                <TextView
                    android:id="@+id/title_legend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/url_desc" />

                <TextView
                    android:id="@+id/title_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{job.title}"
                    android:textColor="@color/articlecolor"

                    app:layout_constraintEnd_toEndOf="@id/type_desc"
                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/title_legend" />

                <TextView
                    android:id="@+id/description_legend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/title_desc" />

                <TextView
                    android:id="@+id/description_desc"
                    htmlToText="@{job.description}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:textColor="@color/articlecolor"

                    app:layout_constraintEnd_toEndOf="@id/type_desc"
                    app:layout_constraintStart_toStartOf="@id/type_legend"
                    app:layout_constraintTop_toBottomOf="@id/description_legend" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:foreground="?android:attr/selectableItemBackground"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>